--- a/development/assets/scss/_about.scss
+++ b/development/assets/scss/_about.scss
@@ -21,7 +21,7 @@
     z-index: 999;
     margin-top: 40px;
     position: absolute;
-    left: 9%;
+    left: 10%;
     transform: translate(0%);
 
     @include respond-to(xl){
@@ -57,6 +57,11 @@
     // padding-left: 180px;
     width: 100%;
     height: 50%;
+
+    @include respond-to(xs){
+      padding-top: 0px;
+      margin: 300px 0;
+    }
 
     &.about-banner__text--acenter {
       display: flex;
@@ -103,7 +108,7 @@
       h1 {
         // padding: 0 25px;
         color: $white;
-        @include font(65px, $bold);
+        @include font(60px, $bold);
         line-height: 1;
         margin: 0;
         font-family: $Raleway;
@@ -127,7 +132,7 @@
       h3 {
         // padding: 0 25px;
         color: $white;
-        @include font(65px, $bold);
+        @include font(60px, $bold);
         line-height: 1;
         margin: 0;
         font-family: $Raleway;
@@ -173,6 +178,7 @@
         color: $white;
         @include font(30px, $semibold);
         line-height: 1;
+        margin-bottom: 0;
         
         font-family: $Raleway;
         text-transform: uppercase;
@@ -190,6 +196,14 @@
     }
   }
 
+}
+
+
+.about-banner__boximg{
+  margin-top: 100px;
+  @include respond-to(xs){
+    margin-top: 0px;
+  }
 }
 
 .main-ourorigin__content {
@@ -251,7 +265,7 @@
 }
 
 .main-ourorigin__img {
-  height: 650px;
+  height: 660px;
 
   img {
     width: 100%;
