--- a/development/assets/scss/main.scss
+++ b/development/assets/scss/main.scss
@@ -1310,4 +1310,7 @@ button:focus {
   .label-acept{
     font-size: 15px !important;
   }
+  .main-experience {
+    grid-template-columns: 100%;
+}
 }
