--- a/development/assets/scss/_about.scss
+++ b/development/assets/scss/_about.scss
@@ -57,10 +57,12 @@
     // padding-left: 180px;
     width: 100%;
     height: 50%;
+    &.about-banner__text--top{
+      @include respond-to(xs){
+        padding-top: 0px;
+        margin: 300px 0;
+      }
 
-    @include respond-to(xs){
-      padding-top: 0px;
-      margin: 300px 0;
     }
 
     &.about-banner__text--acenter {
@@ -103,10 +105,13 @@
       @include respond-to(xs) {
         padding-left: 10px;
       }
-
+      &.about-banner__title__space{
+        h3{
+          letter-spacing: 0;
+        }
+      }
 
       h1 {
-        // padding: 0 25px;
         color: $white;
         @include font(60px, $bold);
         line-height: 1;
