--- a/development/assets/scss/_poke-dots.scss
+++ b/development/assets/scss/_poke-dots.scss
@@ -46,7 +46,7 @@
     @include respond-to(xs) {
       width: 100px;
       left: 25%;
-      top: -10%
+      top: -15%;
     }
 
     img {
@@ -55,7 +55,7 @@
         width: 90%;
       }
       @include respond-to(xs){
-        width: 85%;
+        width: 80%;
       }
     }
   }
