--- a/development/assets/scss/main.scss
+++ b/development/assets/scss/main.scss
@@ -211,6 +211,7 @@ button:focus {
   border: 2px solid transparent;
   padding: 0px 10px;
   border-radius: 5px;
+  
 
   @include respond-to(xs) {
     color: $black;
@@ -219,6 +220,7 @@ button:focus {
   &.fixed-color {
     color: $black;
     transition: 0.3s ease-in-out;
+    text-shadow: 0 4px 4px #0000007a;
 
     &:hover {
       color: $black;
@@ -430,7 +432,7 @@ button:focus {
           }
 
           @include respond-to(xs) {
-            font-size: 30px;
+            font-size: 35px;
             padding: 0;
           }
         }
@@ -451,7 +453,7 @@ button:focus {
           }
 
           @include respond-to(xs) {
-            font-size: 30px;
+            font-size: 45px;
             padding: 0;
           }
         }
@@ -858,7 +860,7 @@ button:focus {
 .main-home__contentline{
   display: grid;
   grid-template-columns: 40% 20% 40%;
-  padding: 10px 0;
+  padding: 30px 0;
   @include respond-to(sm){
     grid-template-columns: 40% 20% 40%;
 
@@ -886,7 +888,7 @@ button:focus {
 }
 
 .main-home__line{
-  width: 100%;
+  width: 80%;
   height: 1px;
   background-color: #686868;
 }
@@ -1191,6 +1193,7 @@ button:focus {
         transition: 0.3s ease-in-out;
         font-style: italic;
         line-height: 2;
+        text-transform: uppercase;
 
         &:hover {
           text-decoration: none;
@@ -1310,7 +1313,4 @@ button:focus {
   .label-acept{
     font-size: 15px !important;
   }
-  .main-experience {
-    grid-template-columns: 100%;
-}
 }
