cambiando focus ubicaciones

--- a/development/assets/scss/main.scss
+++ b/development/assets/scss/main.scss
@@ -1300,6 +1300,14 @@ button:focus {
 #sb_instagram{
   margin-top: 50px;
 }
+#ubications{
+  color: white !important;
+  height: 58px;
+}
+#ubications:focus{
+  color: white !important;
+  background-color: #898989!important;
+}
 
 .ambiental__description p{
   line-height: 1.2;
