--- a/development/assets/scss/_poke-dots.scss
+++ b/development/assets/scss/_poke-dots.scss
@@ -63,6 +63,11 @@
 
 .main-pokedots {
   padding: 50px 0px 50px;
+  .container{
+    @include respond-to(sm){
+      padding: 0;
+    }
+  }
 
   @include respond-to(xs) {
     padding: 20px 0;
@@ -74,7 +79,7 @@
     }
 
     @include respond-to(xs) {
-      padding: 30px;
+      padding: 0px;
     }
   }
 
@@ -93,6 +98,7 @@
 
 .main-pokedots__item {
   margin-bottom: 40px;
+  position: relative;
 
   @include respond-to(xs) {
     margin-bottom: 15px;
@@ -101,7 +107,7 @@
 
 .main-pokedots__img {
   width: 100%;
-  height: 100%;
+  height: 360px;
 
   img {
     width: 100%;
