--- a/development/assets/scss/_work.scss
+++ b/development/assets/scss/_work.scss
@@ -1,4 +1,9 @@
 .main-work {
+  .container{
+    @include respond-to(sm){
+      padding: 0;
+    }
+  }
   padding: 130px 0 50px 0;
   & .main__form{
     margin-bottom: 40px;
