--- a/development/assets/scss/_entries.scss
+++ b/development/assets/scss/_entries.scss
@@ -29,7 +29,7 @@
 
 .main-entries__img {
   width: 100%;
-  height: 100%;
+  height: 355px;
 
   img {
     width: 100%;
@@ -94,7 +94,7 @@
     padding: 0 10px;
 
     @include respond-to(sm) {
-      @include font(16px, $bold);
+      @include font(25px, $bold);
     }
 
     @include respond-to(xs) {
