--- a/development/assets/scss/_modals.scss
+++ b/development/assets/scss/_modals.scss
@@ -1,3 +1,15 @@
+.modal{
+  padding-right: 0 !important;
+}
+
+.modal__flex{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .modal-dialog {
   max-width: 1000px;
 
@@ -34,7 +46,9 @@
 .main-modal__content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-
+  @include respond-to(sm) {
+    grid-template-columns: 1fr;
+  }
   @include respond-to(xs) {
     grid-template-columns: 1fr;
   }
@@ -43,6 +57,11 @@
 .main-modal__img {
   width: 100%;
   height: 100%;
+
+  @include respond-to(xs){
+    height: 355px;
+  }
+
 
   img {
     width: 100%;
@@ -58,17 +77,21 @@
     color: $text;
     text-transform: uppercase;
     font-family: $Raleway;
+    margin-top: -10px;
 
     @include respond-to(md) {
       @include font(40px, $bold);
+      margin-top: -6px;
     }
 
     @include respond-to(sm) {
       @include font(35px, $bold);
+      margin-top: 0;
     }
 
     @include respond-to(xs) {
       @include font(30px, $bold);
+      margin-top: 0;
     }
   }
 }
@@ -216,9 +239,11 @@
 .main-modals__icons{
   height: 85px;
     display: flex;
+    align-items: flex-start;
   img{
     width:25px;
     margin-right: 5px;
+    height: 30px;
   }
 }
 
