--- a/development/style.css
+++ b/development/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Poke
-Theme URI: https://viajesfalabella.blog
+Theme URI: https://pokecolombia.co
 Author: SI SEÑOR AGENCIA
 Author URI: https:sisenoragencia.com
 Description: Diseño: Gladibeth, Desarrollo: Renny Petit;
