--- a/development/assets/scss/_about.scss
+++ b/development/assets/scss/_about.scss
@@ -6,6 +6,17 @@
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
+      @media (max-width: 1023px) {
+        height: auto;
+      }
+
+    &.about-banner__imgmobile{
+      img{
+        @include respond-to(xs){
+          object-position: left;
+        }
+      }
+    }
     img{
       width: 100%;
       height: 100%;
