--- a/development/assets/scss/_entries.scss
+++ b/development/assets/scss/_entries.scss
@@ -40,17 +40,17 @@
 
 .main-entries__text {
   position: absolute;
-  top: 20px;
+  top: 10px;
   left: 20px;
 }
 
 .main-entries__title {
   h3 {
-    @include font(28px, $bold);
+    @include font(23px, $bold);
     color: $white;
     font-family: $Raleway;
     text-transform: uppercase;
-    line-height: 1;
+    line-height: 0.9;
   }
 }
 
@@ -135,3 +135,13 @@
     grid-template-columns: 1fr;
   }
 }
+
+@media (max-width: 768px) and (min-width: 0px){
+  .mb-3, .my-3 {
+    margin-bottom: 0rem!important;
+  }
+  .btn--large{
+      padding: 0 8px;
+  }  
+}
+
