--- a/development/assets/scss/_modals.scss
+++ b/development/assets/scss/_modals.scss
@@ -71,17 +71,22 @@
 }
 
 .main-modal__title {
+  height: 100%;
+    align-items: center;
   p {
     @include font(45px, 800);
     letter-spacing: 0.2px;
     color: $text;
     text-transform: uppercase;
     font-family: $Raleway;
-    margin-top: -10px;
+    // margin-top: -10px;
+    line-height: 1;
+    margin-top: 20px;
+    
 
     @include respond-to(md) {
       @include font(40px, $bold);
-      margin-top: -6px;
+      
     }
 
     @include respond-to(sm) {
@@ -97,7 +102,7 @@
 }
 
 .main-modal__description {
-  padding: 40px 0 20px 0;
+  padding: 15px 0 20px 0;
 
   @include respond-to(sm) {
     padding: 15px 0 10px 0;
@@ -177,7 +182,7 @@
 }
 
 .main-modal__price {
-  padding: 40px 0;
+  padding: 15px 0;
 
   @include respond-to(sm) {
     padding: 20px 0;
@@ -237,9 +242,13 @@
 }
 
 .main-modals__icons{
-  height: 85px;
+  height: 40px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+
+    @include respond-to(xs){
+      margin-top: 0 !important;
+    }
   img{
     width:25px;
     margin-right: 5px;
@@ -250,5 +259,10 @@
 .badge{
   img{
     width: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .modal__flex{
+  height:auto;
   }
 }
