--- a/development/assets/scss/_variables.scss
+++ b/development/assets/scss/_variables.scss
@@ -14,6 +14,7 @@ $breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
     url('../fonts/OstrichSans-Heavy.woff') format('woff');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -22,6 +23,7 @@ $breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
       url('../fonts/AcuminPro-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -30,6 +32,7 @@ $breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
       url('../fonts/AcuminPro-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -38,6 +41,7 @@ $breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
       url('../fonts/AcuminPro-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -46,6 +50,7 @@ $breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
       url('../fonts/AcuminPro-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -54,6 +59,7 @@ $breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
       url('../fonts/SegoeUI-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -62,6 +68,7 @@ $breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
       url('../fonts/SegoeUI.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -70,6 +77,7 @@ $breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
       url('../fonts/SegoeUI-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -78,6 +86,7 @@ $breakpoints: ('xs': "(min-width: 0px) and (max-width: 767px)",
       url('../fonts/SegoeUI-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
 
