--- a/development/assets/scss/_ubication.scss
+++ b/development/assets/scss/_ubication.scss
@@ -73,7 +73,7 @@
     letter-spacing: 1.47px;
     color: #707070;
     font-family: $Segoe;
-    text-transform: lowercase;
+    text-transform: uppercase;
 
     &:nth-child(odd) {
       font-size: 18px;
